<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_app_name">礼合登录模块</string>
    <string name="login_title">欢迎登录礼合CRM</string>
    <string name="login_input_mobile">请输入手机号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_verify_code">输入验证码</string>
    <string name="login_get_verify_code_again">重新获取验证码</string>
    <string name="login_get_verify_code">获取短信验证码</string>
    <string name="login_to_login">登录</string>
    <string name="login_password_login">密码登录</string>
    <string name="login_verify_login">验证码登录</string>
    <string name="login_del_icon">删除图标</string>
    <string name="login_agreement_desc">登录即代表您同意《用户协议》及《隐私政策》</string>
    <string name="login_user_agreement">《用户协议》</string>
    <string name="login_privacy_agreement">《隐私政策》</string>
</resources>