<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.baihe.lib_common.widget.font.FontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_136"
        android:text="@string/login_title"
        style="@style/font_half_bold_28_4A4C5C" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_58"
        android:layout_marginEnd="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.baihe.lib_common.widget.font.FontEditText
            android:id="@+id/et_mobile"
            style="@style/font_normal_20_4A4C5C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:digits="1234567890"
            android:hint="@string/login_input_mobile"
            android:inputType="phone|number"
            android:maxLength="13"
            android:textColorHint="#C5C5CE"
            android:textCursorDrawable="@null"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
        <ImageView
            android:id="@+id/iv_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@mipmap/ic_del"
            android:contentDescription="@string/login_del_icon"
            android:visibility="gone"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@color/COLOR_E6E6E6" />

    <com.baihe.lib_common.widget.font.FontTextView
        android:id="@+id/btn_send_verify_code"
        style="@style/font_half_bold_15_FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/common_button_round_blue"
        android:gravity="center"
        android:text="@string/login_get_verify_code"
        tools:ignore="TextContrastCheck" />

    <com.baihe.lib_common.widget.font.FontTextView
        android:id="@+id/btn_password_login"
        style="@style/font_normal_12_6C8EFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_12"
        android:text="@string/login_password_login"
        tools:ignore="TextContrastCheck" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:button="@drawable/login_selector_check_box"
            tools:ignore="TouchTargetSizeCheck" />

        <com.baihe.lib_common.widget.font.FontTextView
            android:id="@+id/tv_agreement"
            style="@style/font_normal_12_C5C5CE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:gravity="center_vertical"
            android:text="@string/login_agreement_desc"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>


</LinearLayout>